fix: hotel grid & newsletter wrap

--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ img {
   position: relative;
   height: 55px;
   width: 350px;
-  max-width: 92%;
+  max-width: 100%;
   border-radius: 6px;
   overflow: hidden;
 }
@@ -712,6 +712,13 @@ img {
   .slider {
     height: 80%;
   }
+  .booking {
+    max-width: 450px;
+  }
+  .map {
+    max-width: 450px;
+    margin-left: auto;
+  }
   .newsletter {
     padding: 76px 0 83px 0;
   }
@@ -723,7 +730,7 @@ img {
   }
   .newsletter-title {
     width: 350px;
-    max-width: 92%;
+    max-width: 100%;
     align-items: start;
     font-size: 20px;
     line-height: 25px;
