--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -113,6 +113,13 @@
   .slider
     height: 80%
 
+  .booking
+    max-width: 450px
+
+  .map
+    max-width: 450px
+    margin-left: auto
+
   .newsletter
     padding: 76px 0 83px 0
     &-wrapper
@@ -121,7 +128,7 @@
         margin-bottom: 37px
     &-title
       width: 350px
-      max-width: 92%
+      max-width: 100%
       align-items: start
       font-size: 20px
       line-height: 25px
