--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -42,7 +42,7 @@
   position: relative
   height: 55px
   width: 350px
-  max-width: 92%
+  max-width: 100%
   border-radius: 6px
   overflow: hidden
   &__input
